# omni-webui

./: .gitattributes  .gitignore  .gitlint  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  INSTALLATION.md  LICENSE  README.md  TROUBLESHOOTING.md  biome.json  bun.lockb  docker-compose.a1111-test.yaml  docker-compose.yaml  eslint.config.js  eslint.config.mjs  hatch_build.py  i18next-parser.config.ts  index.html  netlify.toml  next.config.mjs  package-lock.json  package.json  pyproject.toml  run-compose.sh  run.sh  svelte.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite-plugin-close.ts  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy-to-hf-spaces.yml  integration-test.yml  release-pypi.yml
backend/: .dockerignore  .gitignore  config.py  main.py
backend/apps/audio/: main.py
backend/apps/ollama/: main.py
backend/apps/openai/: main.py
backend/apps/rag/search/: searxng.py
backend/apps/webui/routers/: utils.py
backend/omni_webui/: __init__.py  config.py  constants.py  main.py
backend/omni_webui/apps/audio/: main.py
backend/omni_webui/apps/images/: main.py
backend/omni_webui/apps/ollama/: main.py
backend/omni_webui/apps/openai/: main.py
backend/omni_webui/apps/rag/: main.py  utils.py
backend/omni_webui/apps/socket/: main.py
backend/omni_webui/apps/webui/: main.py
backend/omni_webui/data/vector_db/: chroma.sqlite3
backend/omni_webui/utils/: __init__.py  misc.py  models.py  webhook.py
cypress/e2e/: settings.cy.ts
docs/: CONTRIBUTING.md  SECURITY.md  apache.md
kubernetes/helm/: README.md
kubernetes/manifest/: kustomization.yaml
kubernetes/manifest/base/: ollama-service.yaml  ollama-statefulset.yaml  open-webui.yaml  webui-deployment.yaml  webui-ingress.yaml  webui-pvc.yaml  webui-service.yaml
kubernetes/manifest/patches/: ollama-statefulset-gpu.yaml
messages/: en-us.json  zh-cn.json
omni_webui/: CHANGELOG.md  __init__.py  __main__.py  _compat.py  _exc.py  app.py  config.py  constants.py  deps.py  env.py  main.py  session.py  settings.py
omni_webui/internal/: db.py
omni_webui/models/: __init__.py  _utils.py  auth.py  auths.py  channels.py  chat.py  chats.py  config.py  feedbacks.py  file.py  files.py  folders.py  group.py  groups.py  knowledge.py  memories.py  messages.py  model.py  models.py  prompts.py  tags.py  tools.py  user.py  users.py
omni_webui/retrieval/: utils.py
omni_webui/retrieval/loaders/: main.py  youtube.py
omni_webui/retrieval/models/: colbert.py
omni_webui/retrieval/vector/: connector.py  main.py
omni_webui/retrieval/vector/dbs/: chroma.py  milvus.py  opensearch.py  pgvector.py  qdrant.py
omni_webui/retrieval/web/: bing.py  brave.py  duckduckgo.py  google_pse.py  jina_search.py  kagi.py  mojeek.py  searchapi.py  searxng.py  serper.py  serply.py  serpstack.py  tavily.py  utils.py
omni_webui/retrieval/web/testdata/: brave.json  searchapi.json  searxng.json  serpstack.json
omni_webui/routers/: audio.py  auths.py  channels.py  chats.py  configs.py  evaluations.py  files.py  folders.py  groups.py  images.py  knowledge.py  memories.py  models.py  ollama.py  openai.py  prompts.py  retrieval.py  tasks.py  tools.py  users.py  utils.py
omni_webui/routes/: __init__.py  mcp.py
omni_webui/routes/api/: __init__.py  models.py
omni_webui/routes/api/v1/: __init__.py  files.py  openai.py  users.py
omni_webui/socket/: main.py  utils.py
omni_webui/static/assets/: pdf-style.css
omni_webui/storage/: provider.py
omni_webui/test/util/: abstract_integration_test.py  mock_user.py
omni_webui/utils/: access_control.py  auth.py  chat.py  middleware.py  misc.py  models.py  oauth.py  payload.py  pdf_generator.py  plugin.py  response.py  task.py  tools.py  webhook.py
omni_webui/utils/images/: comfyui.py
open_webui/: __init__.py  _types.py  config.py  env.py  j2.py  main.py
open_webui/internal/: db.py
open_webui/migrations/: env.py
open_webui/models/: __init__.py  file.py  folders.py  groups.py  users.py
open_webui/retrieval/: utils.py
open_webui/retrieval/models/: colbert.py
open_webui/retrieval/vector/: main.py
open_webui/retrieval/vector/dbs/: chroma.py  pgvector.py
open_webui/routers/: audio.py  auths.py  chats.py  configs.py  files.py  folders.py  images.py  knowledge.py  ollama.py  openai.py  retrieval.py  tasks.py  utils.py
open_webui/socket/: main.py
open_webui/templates/: _macros.jinja2  autocomplete.j2  opensearch.xml.j2  rag.j2
open_webui/utils/: auth.py  chat.py  crypto.py  middleware.py  models.py  oauth.py  pdf_generator.py  task.py  webhook.py
project.inlang/: project_id  settings.json
scripts/: generate-lang-code.py
src/: App.tsx  app.css  app.d.ts  app.html  index.css  main.tsx  tailwind.css
src/app/: ClientBody.tsx  globals.css  layout.tsx
src/components/: ChatArea.tsx  ChatLayout.tsx  ModelSelector.tsx  Sidebar.tsx  SuggestedPrompts.tsx  ThemeToggle.tsx
src/lib/: api.ts  chatHelpers.ts  constants.ts  emoji-groups.json  emoji-shortcodes.json  store.ts
src/lib/api/: index.ts  v1.d.ts
src/lib/apis/: index.ts
src/lib/apis/audio/: index.ts
src/lib/apis/auths/: index.ts
src/lib/apis/channels/: index.ts
src/lib/apis/chats/: index.ts
src/lib/components/: AddFilesPlaceholder.svelte  ChangelogModal.svelte  NotificationToast.svelte  OnBoarding.svelte
src/lib/i18n/: index.ts
src/lib/stores/: index.ts
src/lib/types/: index.ts
src/lib/utils/: _template_old.ts  google-drive-picker.ts  index.ts
src/lib/workers/: pyodide.worker.ts
src/routes/: +error.svelte  +layout.svelte
src/routes/(app)/: +layout.svelte  +page.svelte
src/routes/auth/: +page.svelte
src/routes/error/: +page.svelte
src/routes/watch/: +page.svelte
src/types/: index.ts
static/: opensearch.xml
static/favicon/: site.webmanifest
static/themes/: rosepine-dawn.css  rosepine.css
tests/: conftest.py  test_api_v1_users_route.py  test_cli.py  test_compat.py  test_config.py  test_models.py  test_mutable_basemodel.py  test_password.py  test_utils.py
(+422 files in other folders)
