[project]
name = "omni-webui"
dynamic = ["version"]
description = "An open-source web interface for LLM Chatbot."
readme = "README.md"
requires-python = ">=3.11, <3.12.0a1"
dependencies = [
    "aiosqlite>=0.20.0",
    "anyio[trio]>=4.7.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.111.0",
    "fsspec[s3]>=2024.10.0",
    "open-webui",
    "platformdirs>=4.3.6",
    "pydantic>=2.9",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2",
    "sqlmodel>=0.0.22",
    "typer>=0.15.1",
    "uvicorn>=0.30.6",
]

[project.scripts]
omni-webui = "omni_webui.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]  # keep this for reading hooks from `hatch_build.py`

[tool.hatch.build.targets.wheel]
packages = ["omni_webui"]
force-include = { build = "omni_webui/frontend" }

[tool.hatch.version]
path = "package.json"
pattern = '"version":\s*"(?P<version>[^"]+)"'

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=omni_webui",
    "--cov-fail-under=90",
]
filterwarnings = "ignore:.*:DeprecationWarning\nignore:.*:PendingDeprecationWarning"

[tool.coverage.run]
omit = ["omni_webui/__main__.py", "omni_webui/app.py"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "except importlib.metadata.PackageNotFoundError:\\n\\s+__version__ = \"0.0.0\"",
]

[tool.uv.sources]
open-webui = { git = "https://github.com/open-webui/open-webui", tag = "v0.4.8" }

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
venvPath = "."
venv = ".venv"
