[project]
name = "omni-webui"
dynamic = ["version"]
description = "An open-source web interface for LLM Chatbot."
readme = "README.md"
requires-python = ">=3.11, <3.13.0a1"
dependencies = [
    "aiocache>=0.12.3",
    "aiosqlite>=0.20.0",
    "anyio[trio]>=4.7.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.111.0",
    "fsspec[s3]>=2024.12.0",
    "jinja2>=3.1.5",
    "mcp>=1.1.2",
    "ollama>=0.4.5",
    "open-webui",
    "platformdirs>=4.3.6",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.32",
    "sqlmodel>=0.0.22",
    "swarmx>=0.4.1",
    "typer>=0.15.1",
    "uvicorn[standard]>=0.30.6",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Multimedia",
]

[project.scripts]
omni-webui = "omni_webui.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]  # keep this for reading hooks from `hatch_build.py`

[tool.hatch.build.targets.wheel]
ignore-vcs = true  # for keeping `node_modules` while building
packages = ["omni_webui"]
force-include = { build = "omni_webui/frontend" }

[tool.hatch.version]
path = "package.json"
pattern = '"version":\s*"(?P<version>[^"]+)"'

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=omni_webui",
    "--cov-fail-under=90",
]
filterwarnings = "ignore:.*:DeprecationWarning\nignore:.*:PendingDeprecationWarning"

[tool.coverage.run]
omit = ["omni_webui/__main__.py", "omni_webui/app.py"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "except importlib.metadata.PackageNotFoundError:\\n\\s+__version__ = \"0.0.0\"",
]

[tool.uv.sources]
open-webui = { git = "https://github.com/open-webui/open-webui", tag = "v0.5.3" }

[tool.ruff.lint]
extend-select = ["I", "T20"]

[tool.pyright]
venvPath = "."
venv = ".venv"
